--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <body>
     <main class="">
       <header class="position-absolute w-100">
-        <!-- px-lg-5 == 5rem in bs.css -->
+        <!-- px-lg-5 == 5rem in bootstraps.css -->
         <div
           style="height: 80px"
-          class="d-flex flex-row align-items-center justify-content-between px-lg-5 mx-lg-5"
+          class="d-flex flex-row align-items-center justify-content-between px-lg-5 mx-lg-5 mx-3 "
         >
           <a class="p-lg-5 " aria-current="page" href="#delhi-ncr"
             ><img
@@ -58,6 +58,7 @@
               </li>
             </ul>
           </div>
+          <div class="btn btn-dark d-sm-none">Use App</div>
         </div>
       </header>
       <section class="bg-image text-white position-relative">
